# pong-cpp

./: .gitignore  meson.build
include/: Ball.h  CollisionBox.h  CollisionDetector.h  Game.h  GameBoundary.h  GameInput.h  Log.h  Paddle.h  Renderer.h  Vec2.h  Window.h
src/: Ball.cpp  CollisionBox.cpp  CollisionDetector.cpp  Game.cpp  GameBoundary.cpp  GameInput.cpp  Log.cpp  Paddle.cpp  Renderer.cpp  Vec2.cpp  Window.cpp  main.cpp
test/: BallTests.cpp  CollisionBoxTests.cpp  ExampleTest.cpp  GameBoundaryTests.cpp  PaddleTests.cpp  Vec2Tests.cpp
